added fence core functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:inputType="numberDecimal"
             android:hint="@string/latitude" />
 
         <Button
@@ -45,6 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:inputType="numberDecimal"
             android:hint="@string/longitude" />
 
         <Button
@@ -61,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/radius"
-        android:inputType="numberDecimal" />
+        android:inputType="number" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,6 +100,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/standard_margin"
         android:gravity="center"
-        android:visibility="gone" />
+        
+         />
 
 </LinearLayout>
