--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/mainView">
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
@@ -74,7 +79,6 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/currentWifiName"
             android:layout_alignParentLeft="true"
-            android:inputType="numberDecimal"
             android:hint="@string/wifi_name" />
 
         <Button
@@ -103,3 +107,4 @@
          />
 
 </LinearLayout>
+</RelativeLayout>
